@@ -2392,3 +2392,5 @@ Added -t option to rcontrib (and rfluxmtx) to report progress after the
 given number of seconds.
 
 Added "test" target to makeall to run unit tests.
+
+Modified bsdf2ttree to allow different parameters per input SIR file.
